--- a/about-us.html
+++ b/about-us.html
@@ -9,6 +9,7 @@
 		<div id="header">
 		<!-- Logo Section -->
 			<div id="logo">
+				<img src="images/logo.gif" width="300" height="64" alt="Cambridge Public Library" />
 				<h1>Cambridge Public Library</h1>
 			</div>
 			<!-- End Logo Section -->
@@ -36,6 +37,7 @@
 			<!-- Main Navigation Menu -->
 			<div id="menu">
 							<ul>
+						<li class="home"><a href="#">Home</a></li>
 				    <li class="how"><a href="#">How Do I?</a></li>
 				    <li class="find"><a href="#">Find</a></li>
 				    <li class="youth"><a href="#">Youth</a></li>
@@ -63,10 +65,10 @@
 
 <ul>
   <li>
-    <h3>Saturday November 13th</h3>
+    <h4>Saturday November 13th</h4>
   <ul>
      <li>
-     <p><strong>English Conversation</strong></p>
+     <p><a href="#">English Conversation</a></p>
 			<p class="location"> Main-Community Room</p>
      <p class="time">10:15am-11:45am</p>
      </li>
@@ -74,29 +76,29 @@
   </li>
 
   <li>
-     <h3>Monday November 15th</h3>
+     <h4>Monday November 15th</h4>
   <ul>
       <li>
-      <p><strong>Baby Lapsit</strong></p>
+      <p><a href="#">Baby Lapsit</a></p>
 			<p class="location"> Main-Snail Room</p>
       <p class="time">10:00am-11:00am</p>
       </li>
 
 
       <li>
-      <p><strong>Toddler Time</strong></p>
+      <p><a href="#">Toddler Time</a></p>
 			<p class="location"> O'Neil Branch</p>
       <p class="time">10:30am-11:00am</p>
       </li>
 
       <li>
-      <p><strong>Preschool Story Time</strong></p>
+      <p><a href="#">Preschool Story Time</a></p>
 			<p class="location"> Boudreau Branch</p>
       <p class="time">10:30am-11:00am</p>
       </li>
 
       <li>
-			<p><strong>More...</strong>
+			<p><a href="#">More...</a>
 			</li>
 
   </ul>
@@ -109,15 +111,15 @@
 				<h2>News</h2>
 <ul>
   <li>
-  <h3>Closed on Veterans' Day</h3>
+  <h4><a href="#">Closed on Veterans' Day</a></h4>
     <p>All library branches will be closed on Thursday November 11th in observance of Veterans' Day.</p>
     </li>
 		<li>
-  <h3>Main Library open Sundays</h3>
+  <h4><a href="#">Main Library open Sundays.</a></h4>
   <p>The Main Library is open 1-5pm Sundays.</p>
   </li>
   <li>
-  <h3>Central Square Branch Closed</h3>
+  <h4><a href="#">Central Square Branch Closed:</a></h4>
   <p>Until further notice the Central Square Branch is closed for renovations.</p>
   </li>
 </ul>
@@ -127,26 +129,27 @@
 		</div>
 		<div id="main">
 			<!-- Content of the Page -->
-			<div class="content">
+			<div id="content">
 				<h1>Collections</h1>
+						<img class="right" src="images/collections.jpg" width="230" height="173" alt="photo of reading room"/>
 				    <p>The Cambridge Public Library's collections are diverse in scope and serve to educate, stimulate, and inform the user while also reflecting the individual character of the Cambridge community. Materials are available in many different forms besides print, such as audio, downloadable ebooks, music, film, large print, online resources, magazines and newspapers. </p>
 				    <h2>Special Collections</h2>
 				    <p> <strong>The Black Studies Collection</strong> is housed at the Central Square Branch Library and circulates popular and academic materials. The collection consists of about 750 works by African-American and African authors. Content includes books on the history of Blacks in the South, Civil Rights, works by Harlem Renaissance writers, as well as sports, biographies, histories, poetry, and fiction. </p>
 				    <p> <strong>The Chinese Language Collection</strong> is housed in the O'Connell Branch and has one of the largest collections of Chinese language materials in the Cambridge area. Besides offering DVDs and children's books in the Chinese language, the collection also contains books that are banned in China.</p>
 						<p> The Portuguese Language Collection, called <strong>The Manuel Rogers, Sr. Center for Portuguese Culture and Studies</strong>, is housed at the Valente Branch Library. This is largest collection of Portuguese language books, magazines, newspapers, videos and audio-tapes in the greater Boston area. The center was created in 1983 to serve the Portuguese speaking community and commemorates the devotion of Manuel Rogers, Sr. to the community. The center promotes Portuguese language cultures and draws people of all ages for information and entertainment purposes.  The Cambridge Public Library is very grateful to the Rogers family and friends of their continuing support of the center.</p>
-						<img class="right" src="#" alt="photo of reading room"/>
 			</div>
 			<!-- End Content -->
 		</div>
 		<!-- Footer Section -->
 		<div id="footer">
 			<div id="follow">
-			<h1>Follow</h1>
-			<p>  Facebook: <a href:"http://www.facebook.com/cambridgepl"></p>
-				twitter: <a href:"http://www.twitter.com/cambridgepl"></p> flickr: <a href:"http://www.flickr.com/cambridgepl"></p>
+			<h2>Follow</h2>
+			<p id="facebook"><a href="http://www.facebook.com/cambridgepl">Facebook</a></p>
+			<p id="twitter"><a href="http://www.twitter.com/cambridgepl">Twitter</a></p>
+			<p id="flickr"><a href="http://www.flickr.com/cambridgepl">Flickr</a></p>
 			</div>
 			<div id="feedback">
-				<h1>Feedback</h1>
+				<h2><a href="#">Feedback</a></h2>
 			</div>
 		</div>
 		<!-- End Footer -->
