add link to logo

--- a/about-us.html
+++ b/about-us.html
@@ -9,8 +9,10 @@
 		<div id="header">
 		<!-- Logo Section -->
 			<div id="logo">
+				<a href="#">
 				<img src="images/logo.gif" width="300" height="64" alt="Cambridge Public Library" />
-				<h1>Cambridge Public Library</h1>
+				</a>
+				<h1><a href="#">Cambridge Public Library</a></h1>
 			</div>
 			<!-- End Logo Section -->
 			<!-- Functional Links Section (Ask a Librarian, Search) -->
