fix validation errors

--- a/about-us.html
+++ b/about-us.html
@@ -50,7 +50,7 @@
 			<!-- End Main Navigation Menu -->
 			<!-- Breadcrumb Section -->
 			<div id="breadcrumbs">
-			  <ul id="breadcrumbs">
+			  <ul>
 			  <li><a href="/cpl.aspx" title="Cambridge Public Library">Home</a> &gt; </li>
 			  <li><a href="/cpl.AboutUs.aspx" title="About Us">About Us</a> &gt; </li>
 			  <li>Collections</li>
@@ -100,12 +100,12 @@
       </li>
 
       <li>
-			<p><a href="#">More...</a>
+			<p><a href="#">More...</a></p>
 			</li>
 
   </ul>
   </li>
-
+</ul>
 			</div>
 
 			<!-- News Section -->
@@ -120,10 +120,13 @@
   <h4><a href="#">Main Library open Sundays.</a></h4>
   <p>The Main Library is open 1-5pm Sundays.</p>
   </li>
-  <li>
+  <li class="last">
   <h4><a href="#">Central Square Branch Closed:</a></h4>
   <p>Until further notice the Central Square Branch is closed for renovations.</p>
   </li>
+      <li>
+			<p><a href="#">More...</a></p>
+			</li>
 </ul>
 		
 			</div>
