--- a/about-us.html
+++ b/about-us.html
@@ -29,11 +29,12 @@
 		<!-- Main Branch Address Location -->
 			<div id="location">
 				<p><a href="#">
-					<strong>Main Library</strong><br />
+					Main Library<br />
 				(617) 555-5555<br />
 				449 Broadway<br />
 				Cambridge, MA 02138<br />
-			</a></p>
+				</a>			
+				<a href="#"><strong>Branch Locations</strong></a></p>
 			</div>
 			<!-- End Address Location -->
 			<!-- Main Navigation Menu -->
