--- a/about-us.html
+++ b/about-us.html
@@ -1,158 +1,152 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
-		<title>About Us</title>
-	</head>
-	<body id="about">
-		<div id="header">
-		<!-- Logo Section -->
-			<div id="logo">
-				<a href="#">
-				<img src="images/logo.gif" width="300" height="64" alt="Cambridge Public Library" />
-				</a>
-				<h1><a href="#">Cambridge Public Library</a></h1>
-			</div>
-			<!-- End Logo Section -->
-			<!-- Functional Links Section (Ask a Librarian, Search) -->
-			<div id="functional">
-				<p><a href="#">Ask A Librarian</a></p>
-				<form action="search" method="post" accept-charset="utf-8">
-					<p><input type="text" name="Search The Library" value="Search the Library" /></p>
-					<p><input type="submit" value="Go" /></p>
-				</form>
-			</div>
-			<!-- End Functional Links -->
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
+	<title>About Us</title>
+</head>
+<body id="about">
+	<div id="header">
+	<!-- Logo Section -->
+		<div id="logo">
+			<a href="#">
+			<img src="images/logo.gif" width="300" height="64" alt="Cambridge Public Library" />
+			</a>
+			<h1><a href="#">Cambridge Public Library</a></h1>
 		</div>
-		<div id="nav">
-		<!-- Main Branch Address Location -->
-			<div id="location">
-				<p><a href="#">
-					Main Library<br />
-				(617) 555-5555<br />
-				449 Broadway<br />
-				Cambridge, MA 02138<br />
-				</a>			
-				<a href="#"><strong>Branch Locations</strong></a></p>
-			</div>
-			<!-- End Address Location -->
-			<!-- Main Navigation Menu -->
-			<div id="menu">
-							<ul>
-						<li class="home"><a href="#">Home</a></li>
-						<li class="how"><a href="#">How Do I?</a></li>
-				    <li class="find"><a href="#">Find</a></li>
-				    <li class="youth"><a href="#">Youth</a></li>
-				    <li class="city"><a href="#">Cambridge City Services</a></li>
-						<li class="about"><a href="#">About Us</a></li>
-				    </ul>
-			</div>
-			<!-- End Main Navigation Menu -->
-			<!-- Breadcrumb Section -->
-			<div id="breadcrumbs">
-			  <ul>
-			  <li><a href="/cpl.aspx" title="Cambridge Public Library">Home</a> &gt; </li>
-			  <li><a href="/cpl.AboutUs.aspx" title="About Us">About Us</a> &gt; </li>
-			  <li>Collections</li>
-			  </ul>
-			  
-				</div>
-			<!-- End Breadcrumbs -->
+		<!-- End Logo Section -->
+		<!-- Functional Links Section (Ask a Librarian, Search) -->
+		<div id="functional">
+			<p><a href="#">Ask A Librarian</a></p>
+			<form action="search" method="post" accept-charset="utf-8">
+				<p><input type="text" name="Search The Library" value="Search the Library" /></p>
+				<p><input type="submit" value="Go" /></p>
+			</form>
 		</div>
-		<div id="sidebar">
-		<!-- Events Section -->
-			<div id="events">
-
-<h2>Events</h2>
-
-<ul>
-  <li>
-    <h4>Saturday November 13th</h4>
-  <ul>
-     <li>
-     <p><a href="#">English Conversation</a></p>
-			<p class="location"> Main-Community Room</p>
-     <p class="time">10:15am-11:45am</p>
-     </li>
-  </ul>
-  </li>
-
-  <li>
-     <h4>Monday November 15th</h4>
-  <ul>
-      <li>
-      <p><a href="#">Baby Lapsit</a></p>
-			<p class="location"> Main-Snail Room</p>
-      <p class="time">10:00am-11:00am</p>
-      </li>
-
-
-      <li>
-      <p><a href="#">Toddler Time</a></p>
-			<p class="location"> O'Neil Branch</p>
-      <p class="time">10:30am-11:00am</p>
-      </li>
-
-      <li>
-      <p><a href="#">Preschool Story Time</a></p>
-			<p class="location"> Boudreau Branch</p>
-      <p class="time">10:30am-11:00am</p>
-      </li>
-
-      <li>
-			<p><a href="#">More...</a></p>
+		<!-- End Functional Links -->
+	</div>
+	<!-- Navigation Section -->
+	<div id="nav">
+	<!-- Main Branch Address Location -->
+		<div id="location">
+			<p><a href="#">
+				Main Library<br />
+			(617) 555-5555<br />
+			449 Broadway<br />
+			Cambridge, MA 02138<br />
+			</a>			
+			<a href="#"><strong>Branch Locations</strong></a></p>
+		</div>
+		<!-- End Address Location -->
+		<!-- Main Navigation Menu -->
+		<div id="menu">
+			<ul>
+				<li class="home"><a href="#">Home</a></li>
+				<li class="how"><a href="#">How Do I?</a></li>
+				<li class="find"><a href="#">Find</a></li>
+				<li class="youth"><a href="#">Youth</a></li>
+				<li class="city"><a href="#">Cambridge City Services</a></li>
+				<li class="about"><a href="#">About Us</a></li>
+			</ul>
+		</div>
+		<!-- End Main Navigation Menu -->
+		<!-- Breadcrumb Section -->
+		<div id="breadcrumbs">
+			<ul>
+			<li><a href="/cpl.aspx" title="Cambridge Public Library">Home</a> &gt; </li>
+			<li><a href="/cpl.AboutUs.aspx" title="About Us">About Us</a> &gt; </li>
+			<li>Collections</li>
+			</ul>
+		</div>
+		<!-- End Breadcrumbs -->
+	</div>
+	<!-- End Navigation Section -->
+	<div id="sidebar">
+	<!-- Events Section -->
+		<div id="events">
+		<h2>Events</h2>
+		<ul>
+			<li>
+				<h4>Saturday November 13th</h4>
+			<ul>
+				<li>
+					<p><a href="#">English Conversation</a></p>
+					<p class="location"> Main-Community Room</p>
+					<p class="time">10:15am-11:45am</p>
+				 </li>
+			</ul>
 			</li>
-
-  </ul>
-  </li>
-</ul>
-			</div>
-
-			<!-- News Section -->
-			<div id="news">
-				<h2>News</h2>
-<ul>
-  <li>
-  <h4><a href="#">Closed on Veterans' Day</a></h4>
-    <p>All library branches will be closed on Thursday November 11th in observance of Veterans' Day.</p>
-    </li>
-		<li>
-  <h4><a href="#">Main Library open Sundays.</a></h4>
-  <p>The Main Library is open 1-5pm Sundays.</p>
-  </li>
-  <li class="last">
-  <h4><a href="#">Central Square Branch Closed:</a></h4>
-  <p>Until further notice the Central Square Branch is closed for renovations.</p>
-  </li>
-      <li>
-			<p><a href="#">More...</a></p>
+			<li>
+				 <h4>Monday November 15th</h4>
+			<ul>
+				<li>
+					<p><a href="#">Baby Lapsit</a></p>
+					<p class="location"> Main-Snail Room</p>
+					<p class="time">10:00am-11:00am</p>
+				</li>
+				<li>
+					<p><a href="#">Toddler Time</a></p>
+					<p class="location"> O'Neil Branch</p>
+					<p class="time">10:30am-11:00am</p>
+				</li>
+				<li>
+					<p><a href="#">Preschool Story Time</a></p>
+					<p class="location"> Boudreau Branch</p>
+					<p class="time">10:30am-11:00am</p>
+				</li>
+				<li>
+					<p><a href="#">More...</a></p>
+				</li>
+			</ul>
 			</li>
-</ul>
-		
-			</div>
-
-		</div>
+		</ul>
+	</div>
+	<!-- End Events Section -->
+	<!-- News Section -->
+	<div id="news">
+	<h2>News</h2>
+		<ul>
+			<li>
+				<h4><a href="#">Closed on Veterans' Day</a></h4>
+				<p>All library branches will be closed on Thursday November 11th in observance of Veterans' Day.</p>
+			</li>
+			<li>
+				<h4><a href="#">Main Library open Sundays.</a></h4>
+				<p>The Main Library is open 1-5pm Sundays.</p>
+			</li>
+			<li class="last">
+				<h4><a href="#">Central Square Branch Closed:</a></h4>
+				<p>Until further notice the Central Square Branch is closed for renovations.</p>
+			</li>
+			<li>
+				<p><a href="#">More...</a></p>
+			</li>
+		</ul>
+	</div>
+	<!-- End News Section -->
+	</div>
+	<!-- End Sidebar -->
 		<div id="main">
-			<!-- Content of the Page -->
-			<div id="content">
-				<h1>Collections</h1>
-						<img class="right" src="images/collections.jpg" width="230" height="173" alt="photo of reading room"/>
-				    <p>The Cambridge Public Library's collections are diverse in scope and serve to educate, stimulate, and inform the user while also reflecting the individual character of the Cambridge community. Materials are available in many different forms besides print, such as audio, downloadable ebooks, music, film, large print, online resources, magazines and newspapers. </p>
-				    <h2>Special Collections</h2>
-				    <p> <strong>The Black Studies Collection</strong> is housed at the Central Square Branch Library and circulates popular and academic materials. The collection consists of about 750 works by African-American and African authors. Content includes books on the history of Blacks in the South, Civil Rights, works by Harlem Renaissance writers, as well as sports, biographies, histories, poetry, and fiction. </p>
-				    <p> <strong>The Chinese Language Collection</strong> is housed in the O'Connell Branch and has one of the largest collections of Chinese language materials in the Cambridge area. Besides offering DVDs and children's books in the Chinese language, the collection also contains books that are banned in China.</p>
-						<p> The Portuguese Language Collection, called <strong>The Manuel Rogers, Sr. Center for Portuguese Culture and Studies</strong>, is housed at the Valente Branch Library. This is largest collection of Portuguese language books, magazines, newspapers, videos and audio-tapes in the greater Boston area. The center was created in 1983 to serve the Portuguese speaking community and commemorates the devotion of Manuel Rogers, Sr. to the community. The center promotes Portuguese language cultures and draws people of all ages for information and entertainment purposes.  The Cambridge Public Library is very grateful to the Rogers family and friends of their continuing support of the center.</p>
-			</div>
+	<!-- Content of the Page -->
+		<div id="content">
+			<h1>Collections</h1>
+			<img class="right" src="images/collections.jpg" width="230" height="173" alt="photo of reading room"/>
+			<p>The Cambridge Public Library's collections are diverse in scope and serve to educate, stimulate, and inform the user while also reflecting the individual character of the Cambridge community. Materials are available in many different forms besides print, such as audio, downloadable ebooks, music, film, large print, online resources, magazines and newspapers. </p>
+			<h2>Special Collections</h2>
+			<p> <strong>The Black Studies Collection</strong> is housed at the Central Square Branch Library and circulates popular and academic materials. The collection consists of about 750 works by African-American and African authors. Content includes books on the history of Blacks in the South, Civil Rights, works by Harlem Renaissance writers, as well as sports, biographies, histories, poetry, and fiction. </p>
+			<p> <strong>The Chinese Language Collection</strong> is housed in the O'Connell Branch and has one of the largest collections of Chinese language materials in the Cambridge area. Besides offering DVDs and children's books in the Chinese language, the collection also contains books that are banned in China.</p>
+			<p> The Portuguese Language Collection, called <strong>The Manuel Rogers, Sr. Center for Portuguese Culture and Studies</strong>, is housed at the Valente Branch Library. This is largest collection of Portuguese language books, magazines, newspapers, videos and audio-tapes in the greater Boston area. The center was created in 1983 to serve the Portuguese speaking community and commemorates the devotion of Manuel Rogers, Sr. to the community. The center promotes Portuguese language cultures and draws people of all ages for information and entertainment purposes.  The Cambridge Public Library is very grateful to the Rogers family and friends of their continuing support of the center.</p>
+		</div>
 			<!-- End Content -->
 		</div>
+		<!-- End Main-->
 		<!-- Footer Section -->
 		<div id="footer">
 			<div id="follow">
-			<h2>Follow</h2>
-			<p id="facebook"><a href="http://www.facebook.com/cambridgepl">Facebook</a></p>
-			<p id="twitter"><a href="http://www.twitter.com/cambridgepl">Twitter</a></p>
-			<p id="flickr"><a href="http://www.flickr.com/cambridgepl">Flickr</a></p>
+				<h2>Follow</h2>
+				<p id="facebook"><a href="http://www.facebook.com/cambridgepl">Facebook</a></p>
+				<p id="twitter"><a href="http://www.twitter.com/cambridgepl">Twitter</a></p>
+				<p id="flickr"><a href="http://www.flickr.com/cambridgepl">Flickr</a></p>
 			</div>
 			<div id="feedback">
 				<h2><a href="#">Feedback</a></h2>
