--- a/about-us.html
+++ b/about-us.html
@@ -2,22 +2,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="description" content="The official website for the Cambridge Public Library in Cambridge, MA. On the site you'll find information about the library and its branches, programs and events. You can also access the catalog, articles, and other downloadable materials.">
+	<meta name=”keywords” content=”Library, Libary, Liberry, Libry, Libarary, Public, CPL, Cambridge, Caimbridge, Caimbrige, Cambrige, Massachusetts, MA, Mass, Minuteman, Broadway, Boudreau, Collins, Central Square, O’Neill, O’Connell, Valente, Books, Movies, DVD, DVDs, Book Club, Storytime”>
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
-	<title>About Us</title>
+	<title>About Us - Cambridge Public Library</title>
 </head>
 <body id="about">
+	<div id="page">
 	<div id="header">
 	<!-- Logo Section -->
 		<div id="logo">
 			<a href="#">
-			<img src="images/logo.gif" width="300" height="64" alt="Cambridge Public Library" />
+			<img src="images/logo.gif" width="300" height="64" alt="Cambridge Public Library, Cambridge, MA" />
 			</a>
 			<h1><a href="#">Cambridge Public Library</a></h1>
 		</div>
 		<!-- End Logo Section -->
 		<!-- Functional Links Section (Ask a Librarian, Search) -->
 		<div id="functional">
-			<p><a href="#">Ask A Librarian</a></p>
+			<p><a href="#">Ask A Librarian</a> </p>
 			<form action="search" method="post" accept-charset="utf-8">
 				<p><input type="text" name="Search The Library" value="Search the Library" /></p>
 				<p><input type="submit" value="Go" /></p>
@@ -29,12 +32,10 @@
 	<div id="nav">
 	<!-- Main Branch Address Location -->
 		<div id="location">
-			<p><a href="#">
-				Main Library<br />
+			<p><a href="#">Main Library</a><br />
 			(617) 555-5555<br />
 			449 Broadway<br />
-			Cambridge, MA 02138<br />
-			</a>			
+			Cambridge, MA 02138<br />		
 			<a href="#"><strong>Branch Locations</strong></a></p>
 		</div>
 		<!-- End Address Location -->
@@ -67,7 +68,7 @@
 		<h2>Events</h2>
 		<ul>
 			<li>
-				<h4>Saturday November 13th</h4>
+				<h3>Saturday November 13th</h3>
 			<ul>
 				<li>
 					<p><a href="#">English Conversation</a></p>
@@ -77,22 +78,12 @@
 			</ul>
 			</li>
 			<li>
-				 <h4>Monday November 15th</h4>
+				 <h3>Monday November 15th</h3>
 			<ul>
 				<li>
 					<p><a href="#">Baby Lapsit</a></p>
 					<p class="location"> Main-Snail Room</p>
 					<p class="time">10:00am-11:00am</p>
-				</li>
-				<li>
-					<p><a href="#">Toddler Time</a></p>
-					<p class="location"> O'Neil Branch</p>
-					<p class="time">10:30am-11:00am</p>
-				</li>
-				<li>
-					<p><a href="#">Preschool Story Time</a></p>
-					<p class="location"> Boudreau Branch</p>
-					<p class="time">10:30am-11:00am</p>
 				</li>
 				<li>
 					<p><a href="#">More...</a></p>
@@ -107,15 +98,15 @@
 	<h2>News</h2>
 		<ul>
 			<li>
-				<h4><a href="#">Closed on Veterans' Day</a></h4>
+				<h3><a href="#">Closed on Veterans' Day</a></h3>
 				<p>All library branches will be closed on Thursday November 11th in observance of Veterans' Day.</p>
 			</li>
 			<li>
-				<h4><a href="#">Main Library open Sundays.</a></h4>
+				<h3><a href="#">Main Library open Sundays.</a></h3>
 				<p>The Main Library is open 1-5pm Sundays.</p>
 			</li>
 			<li class="last">
-				<h4><a href="#">Central Square Branch Closed:</a></h4>
+				<h3><a href="#">Central Square Branch Closed:</a></h3>
 				<p>Until further notice the Central Square Branch is closed for renovations.</p>
 			</li>
 			<li>
@@ -129,10 +120,10 @@
 		<div id="main">
 	<!-- Content of the Page -->
 		<div id="content">
-			<h1>Collections</h1>
+			<h2>Collections</h2>
 			<img class="right" src="images/collections.jpg" width="230" height="173" alt="photo of reading room"/>
 			<p>The Cambridge Public Library's collections are diverse in scope and serve to educate, stimulate, and inform the user while also reflecting the individual character of the Cambridge community. Materials are available in many different forms besides print, such as audio, downloadable ebooks, music, film, large print, online resources, magazines and newspapers. </p>
-			<h2>Special Collections</h2>
+			<h3>Special Collections</h3>
 			<p> <strong>The Black Studies Collection</strong> is housed at the Central Square Branch Library and circulates popular and academic materials. The collection consists of about 750 works by African-American and African authors. Content includes books on the history of Blacks in the South, Civil Rights, works by Harlem Renaissance writers, as well as sports, biographies, histories, poetry, and fiction. </p>
 			<p> <strong>The Chinese Language Collection</strong> is housed in the O'Connell Branch and has one of the largest collections of Chinese language materials in the Cambridge area. Besides offering DVDs and children's books in the Chinese language, the collection also contains books that are banned in China.</p>
 			<p> The Portuguese Language Collection, called <strong>The Manuel Rogers, Sr. Center for Portuguese Culture and Studies</strong>, is housed at the Valente Branch Library. This is largest collection of Portuguese language books, magazines, newspapers, videos and audio-tapes in the greater Boston area. The center was created in 1983 to serve the Portuguese speaking community and commemorates the devotion of Manuel Rogers, Sr. to the community. The center promotes Portuguese language cultures and draws people of all ages for information and entertainment purposes.  The Cambridge Public Library is very grateful to the Rogers family and friends of their continuing support of the center.</p>
@@ -153,6 +144,7 @@
 			</div>
 		</div>
 		<!-- End Footer -->
+	</divd>
 	</body>
 </html>
 
