--- a/about-us.html
+++ b/about-us.html
@@ -43,11 +43,46 @@
 		<div id="menu">
 			<ul>
 				<li class="home"><a href="#">Home</a></li>
-				<li class="how"><a href="#">How Do I?</a></li>
-				<li class="find"><a href="#">Find</a></li>
-				<li class="youth"><a href="#">Youth</a></li>
-				<li class="city"><a href="#">Cambridge City Services</a></li>
-				<li class="about"><a href="#">About Us</a></li>
+				<li class="how"><a href="#">How Do I?</a>
+					<ul>
+						<li><a href="#">Access online library resources from home?</a></li>
+						<li><a href="#">Book a meeting room?</a></li>
+						<li><a href="#">Donate materials?</a></li>
+						<li><a href="#">Get a Library Card?</a></li>
+						<li><a href="#">Get a museum pass?</a></li>
+						<li><a href="#">Get materials from other libraries?</a></li>
+						<li><a href="#">Get materials delivered to my home?</a></li>
+						<li><a href="#">Get online at the Library?</a></li>
+						<li><a href="#">Renew library materials from home?</a></li>
+					</ul>
+				</li>
+				<li class="find"><a href="#">Find</a>
+					<ul>
+						<li><a href="#">Books &amp; eBooks</a></li>
+						<li><a href="#">Articles &amp; Electronic Resources</a></li>
+						<li><a href="#">Videos, Music, &amp; Audio Books</a></li>
+					</ul>
+				</li>
+				<li class="youth"><a href="#">Youth</a>
+					<ul>
+						<li><a href="#">Children</a></li>
+						<li><a href="#">Teens</a></li>
+					</ul>
+				</li>
+				<li class="city"><a href="#">Cambridge City Services</a>
+					<ul>
+						<li><a href="#">City of Cambridge Resources</a></li>
+						<li><a href="#">Homeless Directory</a></li>
+						<li><a href="#">Literacy Project</a></li>
+					</ul>	
+				</li>
+				<li class="about"><a href="#">About Us</a>
+					<ul>
+						<li><a href="#">Collections</a></li>
+						<li><a href="#">Friends</a></li>
+						<li><a href="#">Trustees</a></li>
+					</ul>	
+				</li>
 			</ul>
 		</div>
 		<!-- End Main Navigation Menu -->
@@ -101,13 +136,9 @@
 				<h3><a href="#">Closed on Veterans' Day</a></h3>
 				<p>All library branches will be closed on Thursday November 11th in observance of Veterans' Day.</p>
 			</li>
-			<li>
+			<li class="last">
 				<h3><a href="#">Main Library open Sundays.</a></h3>
 				<p>The Main Library is open 1-5pm Sundays.</p>
-			</li>
-			<li class="last">
-				<h3><a href="#">Central Square Branch Closed:</a></h3>
-				<p>Until further notice the Central Square Branch is closed for renovations.</p>
 			</li>
 			<li>
 				<p><a href="#">More...</a></p>
