add meeting rooms page

--- a/how/meetingroom.html
+++ b/how/meetingroom.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="The official website for the Cambridge Public Library in Cambridge, MA. On the site you'll find information about the library and its branches, programs and events. You can also access the catalog, articles, and other downloadable materials." />
-	<meta name="keywords" content="Library, Libary, Liberry, Libry, Libarary, Public, CPL, Cambridge, Caimbridge, Caimbrige, Cambrige, Massachusetts, MA, Mass, Minuteman, Broadway, Boudreau, Collins, Central Square, O’Neill, O’Connell, Valente, Books, Movies, DVD, DVDs, Book Club, Storytime" />
+	<meta name="description" content="The official website for the Cambridge Public Library in Cambridge, MA. On the site you'll find information about the library and its branches, programs and events. You can also access the catalog, articles, and other downloadable materials.">
+	<meta name="keywords" content="Library, Libary, Liberry, Libry, Libarary, Public, CPL, Cambridge, Caimbridge, Caimbrige, Cambrige, Massachusetts, MA, Mass, Minuteman, Broadway, Boudreau, Collins, Central Square, O’Neill, O’Connell, Valente, Books, Movies, DVD, DVDs, Book Club, Storytime">
 	<link rel="stylesheet" href="../css/style.css" type="text/css" media="screen" charset="utf-8" />
-	<title>Children - Cambridge Public Library</title>
+	<title>Book a Meeting Room - Cambridge Public Library</title>
 </head>
-<body id="about">
+<body id="How Do I?">
 	<div id="page">
 	<div id="header">
 	<!-- Logo Section -->
@@ -42,7 +42,7 @@
 		<!-- Main Navigation Menu -->
 		<div id="menu">
 			<ul>
-				<li class="home"><a href="/">Home</a></li>
+				<li class="home"><a href="#">Home</a></li>
 				<li class="how"><a href="#">How Do I?</a>
 					<ul>
 						<li><a href="#">Access online library resources from home?</a></li>
@@ -65,7 +65,7 @@
 				</li>
 				<li class="youth"><a href="#">Youth</a>
 					<ul>
-						<li><a href="/youth/children.html">Children</a></li>
+						<li><a href="#">Children</a></li>
 						<li><a href="#">Teens</a></li>
 					</ul>
 				</li>
@@ -89,9 +89,9 @@
 		<!-- Breadcrumb Section -->
 		<div id="breadcrumbs">
 			<ul>
-			<li><a href="/" title="Cambridge Public Library">Home</a> &gt; </li>
-			<li><a href="/youth" title="Youth">Youth</a> &gt; </li>
-			<li>Children</li>
+			<li><a href="/cpl.aspx" title="Cambridge Public Library">Home</a> &gt; </li>
+			<li><a href="/cpl.How Do I?.aspx" title="How Do I?">How Do I?</a> &gt; </li>
+			<li>Book a Meeting Room</li>
 			</ul>
 		</div>
 		<!-- End Breadcrumbs -->
@@ -151,28 +151,22 @@
 		<div id="main">
 	<!-- Content of the Page -->
 		<div id="content">
-			<h2>Children's Services</h2>
-			<img class="right" src="../images/kidslaughing.jpg" height="171" width="230" alt="Kids laughing"/>
-			<p>The Cambridge Public Library's new <strong>Children's Room</strong> on the top floor of the Main Library always has something happening. We offer music and story programs for infants, toddlers, and preschoolers, activities and book discussions groups for school-aged children, special events for families, and programs for parents and caregivers. We do outreach to local Head Starts, preschools, elementary schools, summer camps, parks, city festivals and more.</p>
-			<p> Check the <strong>Events</strong> box on the left to find out what's happening in the Children's Room. You can also check <strong>Kids Pages</strong> below for Events and Programs. </p>
-			<p><strong>Be sure to get a library card!</strong> We provide an extensive children's collection including books, magazines, music, movies, audio books, games, materials in other languages, resources for parents and child care providers, reference books, databases, and computer stations specifically for children's use. </p>
-			<h3>Children's Room Hours</h3>
-			<p>Monday-Thursday: 9AM-7PM</p>
-			<p>Friday-Saturday: 9AM-5PM</p>
-			<p>Sunday: 1-5PM</p>
-			<h3>Phone Us</h3>
-			<p>Children's Room: 617-349-4038</p>
-			<p>To arrange an Outreach Visit: 617-349-4409</p>
-			<h3>Kids Pages</h3>
- 			<p>Events and Programs</p>
-			<p>New Books, Movies, Games, Music</p>
-			<p>Book Lists</p>
-			<p>Fun Stuff and Games</p>
-			<p>Homework Help</p>
-			<p>For Parents and Caregivers</p>
-			<p>For Teachers and Educators</p>
-			<p>For Homeschoolers</p>
-			<p>Early Childhood Resource Center</p>
+			<img class="right" src="../images/meetingroom.jpg" alt="photo of book group meeting"/>
+			<h2>Meeting Rooms</h2>
+			<h3>Main Library</h3>
+			<p>The Main Library has a number of meeting rooms available 			                for use by Cambridge-based not-for-profit community groups.The meeting 			rooms and capacity are:</p>
+			<br>Beech Room: capacity 16 </br>
+			<br>Rindge Room: capacity 12 </br>
+			<br>Community Room: capacity 100 </br>
+			<br>Lecture Hall: capacity 230 </br>
+			<br>Fuller Room: capacity 6 </br>
+			<br>Computer classroom: capacity 20 </br>
+			<p>All meeting rooms are subject to availability with the understanding that library programs have priority. If interested in booking a meeting room, please fill out a meeting room application and submit this to the Main Library no more than two months in advance.You can also fax the application to (617)349-4028.</p>
+			<p>For complete information, please see our policy and application.You can also call the Library Administration Office at (617) 349-4032 with questions.</p>
+			<p>Main Library Meeting Rooms Policy and Application</p><!--This line would link to another page with the policy and application-->
+			<h3>Branch Libraries</h3>
+			<p>Central Square Branch: Lewis Room and Rotary Conference Room are not available while the branch is closed. </p>
+			<p>The O'Neill Branch Meeting Room can be booked for two hours and can accomodate 6 - 8 people maximum. For more information, call (617) 349-4023.	
 				
 		</div>
 			<!-- End Content -->
