--- a/Cambridge/index.html
+++ b/Cambridge/index.html
@@ -1,13 +1,13 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="The official website for the Cambridge Public Library in Cambridge, MA. On the site you'll find information about the library and its branches, programs and events. You can also access the catalog, articles, and other downloadable materials." />
 	<meta name="keywords" content="Library, Libary, Liberry, Libry, Libarary, Public, CPL, Cambridge, Caimbridge, Caimbrige, Cambrige, Massachusetts, MA, Mass, Minuteman, Broadway, Boudreau, Collins, Central Square, O’Neill, O’Connell, Valente, Books, Movies, DVD, DVDs, Book Club, Storytime" />
 	<link rel="stylesheet" href="../css/style.css" type="text/css" media="screen" charset="utf-8" />
-	<title>Book a Meeting Room - Cambridge Public Library</title>
+	<title>Cambridge City Services - Cambridge Public Library</title>
 </head>
-<body id="how">
+<body id="cambridge">
 	<div id="page">
 	<div id="header">
 	<!-- Logo Section -->
@@ -65,7 +65,7 @@
 				</li>
 				<li class="youth"><a href="#">Youth</a>
 					<ul>
-						<li><a href="#">Children</a></li>
+						<li><a href="/youth/children">Children</a></li>
 						<li><a href="#">Teens</a></li>
 					</ul>
 				</li>
@@ -90,8 +90,8 @@
 		<div id="breadcrumbs">
 			<ul>
 			<li><a href="/cpl.aspx" title="Cambridge Public Library">Home</a> &gt; </li>
-			<li><a href="/cpl.How Do I?.aspx" title="How Do I?">How Do I?</a> &gt; </li>
-			<li>Book a Meeting Room</li>
+			<li><a href="/cpl.AboutUs.aspx" title="About Us">About Us</a> &gt; </li>
+			<li>Collections</li>
 			</ul>
 		</div>
 		<!-- End Breadcrumbs -->
@@ -151,24 +151,23 @@
 		<div id="main">
 	<!-- Content of the Page -->
 		<div id="content">
-			<img class="right" src="../images/meetingroom.jpg" alt="photo of book group meeting"/>
-			<h2>Meeting Rooms</h2>
-			<h3>Main Library</h3>
-			<p>The Main Library has a number of meeting rooms available 			                for use by Cambridge-based not-for-profit community groups.The meeting 			rooms and capacity are:</p>
-			<br>Beech Room: capacity 16 </br>
-			<br>Rindge Room: capacity 12 </br>
-			<br>Community Room: capacity 100 </br>
-			<br>Lecture Hall: capacity 230 </br>
-			<br>Fuller Room: capacity 6 </br>
-			<br>Computer classroom: capacity 20 </br>
-			<p>All meeting rooms are subject to availability with the understanding that library programs have priority. If interested in booking a meeting room, please fill out a meeting room application and submit this to the Main Library no more than two months in advance.You can also fax the application to (617)349-4028.</p>
-			<p>For complete information, please see our policy and application.You can also call the Library Administration Office at (617) 349-4032 with questions.</p>
-			<p>Main Library Meeting Rooms Policy and Application</p><!--This line would link to another page with the policy and application-->
-			<h3>Branch Libraries</h3>
-			<p>Central Square Branch: Lewis Room and Rotary Conference Room are not available while the branch is closed. </p>
-			<p>The O'Neill Branch Meeting Room can be booked for two hours and can accomodate 6 - 8 people maximum. For more information, call (617) 349-4023.	
-				
-		</div>
+			<h2>Cambridge City Services</h2>
+			<img alt="Cambridge City Hall" src="../images/cityhall.jpg" class="right" width="300" height="225" />
+			<h3> <a href="http://www.cambridgema.gov/~/media/Files/publicinformationoffice/thecambridgelifemagazineandcityresourceguide/CambridgeLife_2010_2011.ashx"> Cambridge Life</a></h3>
+			<p>A city resource guide provides a comprehensive reference of city organization, political structure and municipal services.  A quick overview of city ordinances, contact names and phone numbers, and city cultural events.</p>
+			<h3> <a href="http://www.cambridgema.gov/">City of Cambridge</a></h3>
+			Information on city agencies, news and services.
+			<h3> <a href="http://cambridgeenergyalliance.org/">Cambridge Energy Alliance</a> </h3>
+			<p>A not-for-profit organization created to save city businesses, non-profits and residents money on energy and reduce our carbon footprint.</p>
+			<h3> <a href="http://www.cambridgema.gov/cpl/Services/theliteracyproject.aspx">Cambridge Literacy Project</a> </h3>
+			<p>The Literacy Project offers programs for adults and children to help improve their English language skills, prepare for the GED, citizenship or other testing, and homework help for young students and older students attending community college. </p>
+			<h3> <a href="http://www.cambridgepublichealth.org/">Cambridge Public Health</a> </h3>
+			<p>The Cambridge Health Department is part of Cambridge Health Alliance which provides health care services for the benefit of residents and workers.</p>
+			<h3> <a href="http://www2.cpsd.us/">Cambridge Public Schools</a> </h3>
+			<p>A comprehensive site highlighting the city's innovative and diverse public school system.</p>
+			<h3> <a href="http://www.tinyurl.com/CambridgeHomelessResources">Cambridge Resources for the Homeless</a> </h3>
+			<p>A comprehensive directory of resources for the homeless including temporary and transitional housing, meals, food, health care and legal assistance, among other resources.</p>
+			</div>
 			<!-- End Content -->
 		</div>
 		<!-- End Main-->
@@ -188,3 +187,4 @@
 	</div>
 	</body>
 </html>
+
