--- a/city/index.html
+++ b/city/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="../css/style.css" type="text/css" media="screen" charset="utf-8" />
 	<title>Cambridge City Services - Cambridge Public Library</title>
 </head>
-<body id="cambridge">
+<body id="city">
 	<div id="page">
 	<div id="header">
 	<!-- Logo Section -->
