--- a/city/index.html
+++ b/city/index.html
@@ -136,8 +136,8 @@
 				<p>All library branches will be closed on Thursday November 11th in observance of Veterans' Day.</p>
 			</li>
 			<li class="last">
-				<h3><a href="#">Main Library open Sundays.</a></h3>
-				<p>The Main Library is open 1-5pm Sundays.</p>
+                          <h3><a href="/news/2010-10-07-branch-closed.html">Central Square Branch Closed</a></h3>
+                          <p>We regret to advise our users, but the Central Square Branch will be closed longer than anticipated...</p>
 			</li>
 			<li>
 				<p><a href="#">More...</a></p>
