--- a/find/books.html
+++ b/find/books.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="../css/style.css" type="text/css" media="screen" charset="utf-8" />
 	<title>Find: Books &amp; E-Books - Cambridge Public Library</title>
 </head>
-<body id="city">
+<body id="find">
 	<div id="page">
 	<div id="header">
 	<!-- Logo Section -->
