add blue link to test

--- a/find/books.html
+++ b/find/books.html
@@ -154,7 +154,7 @@
 		
 <h2>Books</h2>
 <img class="right" height="173" width="230" alt="CPL Reading Room" src="../images/readingroom.jpg" />	
-Your library card is the key to the resources of Cambridge's Main Library and its six branches. It is also your membership into the <a href="http://library.minlib.net/search/">Minuteman Library Network </a>(MLN). All MLN library members allow you to borrow their materials on your Cambridge library card. The Cambridge Public Library honors all library cards issued by other MLN libraries. 		
+Your library card is the key to the resources of Cambridge's Main Library and its six branches. It is also your membership into the <a class="blue" href="http://library.minlib.net/search/">Minuteman Library Network </a>(MLN). All MLN library members allow you to borrow their materials on your Cambridge library card. The Cambridge Public Library honors all library cards issued by other MLN libraries. 		
 <h2>E-Books</h2>
 	
 		
