--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
 	<title>About Us - Cambridge Public Library</title>
 </head>
-<body id="about">
+<body id="home">
 	<div id="page">
 	<div id="header">
 	<!-- Logo Section -->
@@ -40,7 +40,6 @@
 		</div>
 		<!-- End Address Location -->
 		<!-- Main Navigation Menu -->
-		<div id="menuborder">
 		<div id="menu">
 			<ul>
 				<li class="home"><a href="#">Home</a></li>
@@ -86,17 +85,7 @@
 				</li>
 			</ul>
 		</div>
-		</div>
 		<!-- End Main Navigation Menu -->
-		<!-- Breadcrumb Section -->
-		<div id="breadcrumbs">
-			<ul>
-			<li><a href="/cpl.aspx" title="Cambridge Public Library">Home</a> &gt; </li>
-			<li><a href="/cpl.AboutUs.aspx" title="About Us">About Us</a> &gt; </li>
-			<li>Collections</li>
-			</ul>
-		</div>
-		<!-- End Breadcrumbs -->
 	</div>
 	<!-- End Navigation Section -->
 	<div id="sidebar">
@@ -153,13 +142,11 @@
 		<div id="main">
 	<!-- Content of the Page -->
 		<div id="content">
-			<h2>Collections</h2>
-			<img class="right" src="images/collections.jpg" width="230" height="173" alt="photo of reading room"/>
-			<p>The Cambridge Public Library's collections are diverse in scope and serve to educate, stimulate, and inform the user while also reflecting the individual character of the Cambridge community. Materials are available in many different forms besides print, such as audio, downloadable ebooks, music, film, large print, online resources, magazines and newspapers. </p>
-			<h3>Special Collections</h3>
-			<p> <strong>The Black Studies Collection</strong> is housed at the Central Square Branch Library and circulates popular and academic materials. The collection consists of about 750 works by African-American and African authors. Content includes books on the history of Blacks in the South, Civil Rights, works by Harlem Renaissance writers, as well as sports, biographies, histories, poetry, and fiction. </p>
-			<p> <strong>The Chinese Language Collection</strong> is housed in the O'Connell Branch and has one of the largest collections of Chinese language materials in the Cambridge area. Besides offering DVDs and children's books in the Chinese language, the collection also contains books that are banned in China.</p>
-			<p> The Portuguese Language Collection, called <strong>The Manuel Rogers, Sr. Center for Portuguese Culture and Studies</strong>, is housed at the Valente Branch Library. This is largest collection of Portuguese language books, magazines, newspapers, videos and audio-tapes in the greater Boston area. The center was created in 1983 to serve the Portuguese speaking community and commemorates the devotion of Manuel Rogers, Sr. to the community. The center promotes Portuguese language cultures and draws people of all ages for information and entertainment purposes.  The Cambridge Public Library is very grateful to the Rogers family and friends of their continuing support of the center.</p>
+			<a href="#"><img src="images/howdoi.jpg" width="250" height="258" class="left" alt="How Do I?" /></a>
+			<a href="#"><img src="images/find.jpg" width="349" height="231" class="right" alt="Find" /></a>
+			<a href="#"><img src="images/city.jpg" width="349" height="111" class="right" alt="Cambridge City Services" /></a>
+			<a href="#"><img src="images/youth.jpg" width="250" height="194"  class="left youth" alt="Youth" /></a>
+			<a href="#"><img src="images/about.jpg" width="349" height="109" class="right" alt="About Us" /></a>						
 		</div>
 			<!-- End Content -->
 		</div>
