--- a/about/collections.html
+++ b/about/collections.html
@@ -153,7 +153,7 @@
 	<!-- Content of the Page -->
 		<div id="content">
 			<h2>Collections</h2>
-			<img class="right" src="images/collections.jpg" width="230" height="173" alt="photo of reading room"/>
+			<img class="right" src="../images/collections.jpg" width="230" height="173" alt="photo of reading room"/>
 			<p>The Cambridge Public Library's collections are diverse in scope and serve to educate, stimulate, and inform the user while also reflecting the individual character of the Cambridge community. Materials are available in many different forms besides print, such as audio, downloadable ebooks, music, film, large print, online resources, magazines and newspapers. </p>
 			<h3>Special Collections</h3>
 			<p> <strong>The Black Studies Collection</strong> is housed at the Central Square Branch Library and circulates popular and academic materials. The collection consists of about 750 works by African-American and African authors. Content includes books on the history of Blacks in the South, Civil Rights, works by Harlem Renaissance writers, as well as sports, biographies, histories, poetry, and fiction. </p>
