incorporate changes from skype call

--- a/city/index.html
+++ b/city/index.html
@@ -153,13 +153,13 @@
 			<h2>Cambridge City Services</h2>
 			<img alt="Cambridge City Hall" src="../images/cityhall.jpg" class="right" width="300" height="225" />
 			<h3> <a href="http://www.cambridgema.gov/~/media/Files/publicinformationoffice/thecambridgelifemagazineandcityresourceguide/CambridgeLife_2010_2011.ashx"> Cambridge Life</a></h3>
-			<p>A city resource guide provides a comprehensive reference of city organization, political structure and municipal services.  A quick overview of city ordinances, contact names and phone numbers, and city cultural events.</p>
+			<p>A city resource guide provides a comprehensive reference of city organizations, political structure and municipal services.  A quick overview of city ordinances, contact names and phone numbers, and city cultural events.</p>
 			<h3> <a href="http://www.cambridgema.gov/">City of Cambridge</a></h3>
 			Information on city agencies, news and services.
 			<h3> <a href="http://cambridgeenergyalliance.org/">Cambridge Energy Alliance</a> </h3>
 			<p>A not-for-profit organization created to save city businesses, non-profits and residents money on energy and reduce our carbon footprint.</p>
 			<h3> <a href="http://www.cambridgema.gov/cpl/Services/theliteracyproject.aspx">Cambridge Literacy Project</a> </h3>
-			<p>The Literacy Project offers programs for adults and children to help improve their English language skills, prepare for the GED, citizenship or other testing, and homework help for young students and older students attending community college. </p>
+			<p>The Literacy Project offers programs for adults and children to improve their English language skills, prepare for the GED, citizenship or other testing, and homework help for young students and older students attending community college. </p>
 			<h3> <a href="http://www.cambridgepublichealth.org/">Cambridge Public Health</a> </h3>
 			<p>The Cambridge Health Department is part of Cambridge Health Alliance which provides health care services for the benefit of residents and workers.</p>
 			<h3> <a href="http://www2.cpsd.us/">Cambridge Public Schools</a> </h3>
