--- a/find/books.html
+++ b/find/books.html
@@ -152,18 +152,21 @@
 	<!-- Content of the Page -->
 		<div id="content">
 		
-<h2>Books</h2>
-<img class="right" height="173" width="230" alt="CPL Reading Room" src="../images/readingroom.jpg" />	
-Your library card is the key to the resources of Cambridge's Main Library and its six branches. It is also your membership into the <a class="blue" href="http://library.minlib.net/search/">Minuteman Library Network </a>(MLN). All MLN library members allow you to borrow their materials on your Cambridge library card. The Cambridge Public Library honors all library cards issued by other MLN libraries. 		
-<h2>E-Books</h2>
+<h2>Books &amp; E-Books</h2>
+<form id="catalog">
+	<input type="text" size="40" name="item" value="Search the Catalog" />
+	<input type="submit" value="Go" />
+</form>		
+<img class="right" height="173" width="230" alt="CPL Reading Room" src="../images/readingroom.jpg">	
+<h3>Books</h3>
 	
-		
-<p>The library has two products that provide eBooks to you at home:</p>
 
-<p><a href="http://digital.minlib.net/F06EE627-BD13-4A1C-A1CB-F8684AA95B81/10/531/en/Default.htm">Overdrive's Digital Media Catalog</a> is a newer collection of eBooks and Downloadable Audio Books that does support Apple formats.  Overdrive has approximately 169 titles that can be played on a variety of portable devices, such as PDAs, Pocket PCs, and Smartphones (depending on publisher permissions and device specifications), and more are being added everyday.</p>
+Your library card is the key to the resources of Cambridge's Main Library and its six branches. It is also your membership into the <a href="http://library.minlib.net/search/">Minuteman Library Network </a>(MLN). All MLN library members allow you to borrow their materials on your Cambridge library card. The Cambridge Public Library honors all library cards issued by other MLN libraries. 		
+
+<h3>E-Books</h3>
+<p><a href="http://digital.minlib.net/F06EE627-BD13-4A1C-A1CB-F8684AA95B81/10/531/en/Default.htm">Overdrive</a> is a newer collection of eBooks and Downloadable Audio Books that does support Apple formats.  Overdrive has approximately 169 titles that can be played on a variety of mobile devices (depending on publisher permissions and device specifications), and more are being added every day.</p>
 
 <p><a href="http://camproxy.minlib.net/login?url=http://www.netlibrary.com/">NetLibrary</a> has a huge database of eBooks with over 3,000 titles at your disposal.  However, this service has been discontinued and nothing new is being added to the collection.  It also does not support any Apple formats.  You will need to create a free account with them to begin.</p>
-	
 
 		</div>
 			<!-- End Content -->
