--- a/how/meetingroom.html
+++ b/how/meetingroom.html
@@ -163,7 +163,7 @@
 			<br>Computer classroom: capacity 20 </br>
 			<p>All meeting rooms are subject to availability with the understanding that library programs have priority. If interested in booking a meeting room, please fill out a meeting room application and submit this to the Main Library no more than two months in advance.You can also fax the application to (617)349-4028.</p>
 			<p>For complete information, please see our policy and application.You can also call the Library Administration Office at (617) 349-4032 with questions.</p>
-			<p>Main Library Meeting Rooms Policy and Application</p><!--This line would link to another page with the policy and application-->
+			<p><a href="#">Main Library Meeting Rooms Policy and Application</a></p>
 			<h3>Branch Libraries</h3>
 			<p>Central Square Branch: Lewis Room and Rotary Conference Room are not available while the branch is closed. </p>
 			<p>The O'Neill Branch Meeting Room can be booked for two hours and can accomodate 6 - 8 people maximum. For more information, call (617) 349-4023.	
