update feedback form

--- a/feedback.html
+++ b/feedback.html
@@ -150,23 +150,21 @@
 		<div id="content">
 			<div id="suggestion">
 				<h2>Feedback</h2>
-	<h3>Please give us your name, home address, and email address so that we can properly respond to your suggestion or comment.</h3>
+	<h3>Please give us your name, phone number, and email address so that we can properly respond to your suggestion or comment.</h3>
+	<p class="required">*All Fields Required</p>
+<form>
 <ul>
-	<form>
-	<li>Your Name:<input type="text" name="yourname" /></li>
-	<li>Your Home Address:<input type="text" name="homeaddress" /></li>
-	<li>Your Email Address:<input type="text" name="emailaddress" /></li>
-	<li>Do you want a response?
+	<li>Name:<input type="text" name="yourname" size="40" /></li>
+	<li>Phone Number:<input type="text" name="homeaddress" size="20" /></li>
+	<li>Email Address:<input type="text" name="emailaddress" size="40" /></li>
+	<li>Do you want a response?<br />
 		<input type="radio" name="response" value="yes" /> Yes
 		<input type="radio" name="response" value="no" /> No</li>
-	<br />
-	<li>Your Suggestion/Comment:&nbsp;&nbsp;<textarea rows="10" cols="60"></textarea></p></div>
-	</li>
+	<li>Suggestion/Comment:<br /><textarea rows="10" cols="60"></textarea></li>
 </ul>
-<form action="mailto:bren@simmons.edu" method="get" enctype="text/plain">
-<input type="button" value="Submit">
+<input class="right" type="button" value="Submit" />
 </form>
-
+</div>
 		</div>
 			<!-- End Content -->
 				</div>
