--- a/how/meetingroom.html
+++ b/how/meetingroom.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="The official website for the Cambridge Public Library in Cambridge, MA. On the site you'll find information about the library and its branches, programs and events. You can also access the catalog, articles, and other downloadable materials." />
 	<meta name="keywords" content="Library, Libary, Liberry, Libry, Libarary, Public, CPL, Cambridge, Caimbridge, Caimbrige, Cambrige, Massachusetts, MA, Mass, Minuteman, Broadway, Boudreau, Collins, Central Square, O’Neill, O’Connell, Valente, Books, Movies, DVD, DVDs, Book Club, Storytime" />
 	<link rel="stylesheet" href="../css/style.css" type="text/css" media="screen" charset="utf-8" />
-	<title>Book a Meeting Room - Cambridge Public Library</title>
+	<title>How Do I Book a Meeting Room? - Cambridge Public Library</title>
 </head>
 <body id="how">
 	<div id="page">
