move hours and supbages to the top

--- a/youth/children.html
+++ b/youth/children.html
@@ -152,27 +152,30 @@
 		<div id="content">
 			<h2>Children's Services</h2>
 			<img class="right" src="../images/kidslaughing.jpg" height="171" width="230" alt="Kids laughing"/>
-			<p>The Cambridge Public Library's new <strong>Children's Room</strong> on the top floor of the Main Library always has something happening. We offer music and story programs for infants, toddlers, and preschoolers, activities and book discussions groups for school-aged children, special events for families, and programs for parents and caregivers. We do outreach to local Head Starts, preschools, elementary schools, summer camps, parks, city festivals and more.</p>
-			<p> Check the <strong>Events</strong> box on the left to find out what's happening in the Children's Room. You can also check <strong>Kids Pages</strong> below for Events and Programs. </p>
-			<p><strong>Be sure to get a library card!</strong> We provide an extensive children's collection including books, magazines, music, movies, audio books, games, materials in other languages, resources for parents and child care providers, reference books, databases, and computer stations specifically for children's use. </p>
+
+			<ul>
+				<li><a href="#">Events and Programs</a></li>
+				<li><a href="#">New Books, Movies, Games, Music</a></li>
+				<li><a href="#">Book Lists</a></li>
+				<li><a href="#">Fun Stuff and Games</a></li>
+				<li><a href="#">Homework Help</a></li>
+				<li><a href="#">For Parents and Caregivers</a></li>
+				<li><a href="#">For Teachers and Educators</a></li>
+				<li><a href="#">For Homeschoolers</a></li>
+				<li><a href="#">Early Childhood Resource Center</a></li>
+			</ul>
+			<div class="right aside clear">
 			<h3>Children's Room Hours</h3>
 			<p>Monday-Thursday: 9AM-7PM</p>
 			<p>Friday-Saturday: 9AM-5PM</p>
 			<p>Sunday: 1-5PM</p>
 			<h3>Phone Us</h3>
 			<p>Children's Room: 617-349-4038</p>
-			<p>To arrange an Outreach Visit: 617-349-4409</p>
-			<h3>Kids Pages</h3>
- 			<p>Events and Programs</p>
-			<p>New Books, Movies, Games, Music</p>
-			<p>Book Lists</p>
-			<p>Fun Stuff and Games</p>
-			<p>Homework Help</p>
-			<p>For Parents and Caregivers</p>
-			<p>For Teachers and Educators</p>
-			<p>For Homeschoolers</p>
-			<p>Early Childhood Resource Center</p>
-				
+			</div>
+			<p>The Cambridge Public Library's new <strong>Children's Room</strong> on the top floor of the Main Library always has something happening. We offer music and story programs for infants, toddlers, and preschoolers, activities and book discussions groups for school-aged children, special events for families, and programs for parents and caregivers. We do outreach to local Head Starts, preschools, elementary schools, summer camps, parks, city festivals and more.</p>
+			<p> Check the <strong>Events</strong> box on the left to find out what's happening in the Children's Room. You can also check <strong>Kids Pages</strong> below for Events and Programs. </p>
+			<p><strong>Be sure to get a library card!</strong> We provide an extensive children's collection including books, magazines, music, movies, audio books, games, materials in other languages, resources for parents and child care providers, reference books, databases, and computer stations specifically for children's use. </p>
+
 		</div>
 			<!-- End Content -->
 		</div>
